# FarmGeneration

./: .gitignore  README.md  agy_instructions1.txt  codex_instruction1.txt  codex_instructions2.txt  env.sh  orchard_config.yaml  orchard_world.usda  pyproject.toml
assets/weeds/ashweed/: ashweed.usda
assets/weeds/ashweed/weed_2/: ashweed_2.usda
assets/weeds/dry_grass/: dry_grass.usda
deployed_orchard/: gen.txt  orchard_4x20.usda  orchard_config.yaml
deployed_orchard/assets/weeds/ashweed/weed_1/: ashweed_1.usda
deployed_orchard/assets/weeds/dry_grass/weed_1/: dry_grass_1.usda
deployed_orchard/assets/weeds/dry_grass/weed_2/: dry_grass_2.usda
deployed_orchard/assets/weeds/fennel/: fennel.usda
deployed_orchard/assets/weeds/fennel/weed_1/: fennel_1.usda
deployed_orchard/assets/weeds/fennel/weed_2/: fennel_2.usda
src/orchard_generator/: __init__.py  cli.py  config.py  generator.py  ground_generator.py  tree_generator.py  weed_generator.py
test_output/: orchard_generated_trees_world.usda  orchard_world.usda
test_output/pecan_tree/: pecan_tree.usda
test_output/pecan_trees/tree_1/: pecan_tree_1.usda
test_output/pecan_trees/tree_2/: pecan_tree_2.usda
tests/: __init__.py  test_assets.py  test_generate_ground.py  test_generate_orchard.py  test_generate_tree.py  test_generate_weeds.py
