[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "farm-generation"
version = "0.1.0"
description = "Generate USD orchard environments for robotics simulation"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6"]

[project.scripts]
generate-orchard = "orchard_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
